# open-theft-auto

./: CMakeLists.txt  README.md  imgui.ini
assets/levels/: test_grid.tg
assets/shaders/: model.frag  model.vert  sprite.vert  water.frag  water.vert
include/: Building.hpp  Camera.hpp  ControllableObject.hpp  Engine.hpp  GameLogic.hpp  GameObject.hpp  InputManager.hpp  LevelData.hpp  LevelSerialization.hpp  Mesh.hpp  Player.hpp  Renderer.hpp  Road.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Tile.hpp  TileGrid.hpp  TileGridEditor.hpp  Vehicle.hpp  Window.hpp
src/: Building.cpp  Camera.cpp  ControllableObject.cpp  Engine.cpp  GameLogic.cpp  GameObject.cpp  InputManager.cpp  LevelSerialization.cpp  Mesh.cpp  Player.cpp  Renderer.cpp  Road.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Tile.cpp  TileGrid.cpp  TileGridEditor.cpp  Vehicle.cpp  Window.cpp  main.cpp  stb_implementations.cpp
